# yolo_trt_ws

./: README.md  remove.sh  start.sh
config/: config.yaml  config3.yaml  labels.names  yolov5.launch
config/launch/: ud_vision_detection.launch  yolov5.launch
src/yolov5/: CMakeLists.txt  package.xml
src/yolov5/include/: detect_cv.h
src/yolov5/src/: detect_cv.cpp  main.cpp
